# decoders

./: README.md
Berlekamp-Massey_binary_BCH/src/: main.cpp
Sugiyama_Reed-Solomon/: .gitignore  CMakeLists.txt  do_perf.sh
Sugiyama_Reed-Solomon/src/: main.cpp
Viterbi_soft_Linear/: CMakeLists.txt  build_and_run.fish
Viterbi_soft_Linear/src/: main.cpp
